--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 scale: 1.05;
             }
         </style>
+        <script>
+            jQuery(".btn").click(function(){
+                alert("Wait 5 sec to. Log in to your facebook first to vote");
+            }
+            );
+        </script>
 
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>Sirajgonj Crush Factory!</title>
